<resources>
    <string name="app_name">Rezepte</string>
    <string name="title_hauptgerichte">Hauptgerichte</string>
    <string name="title_salate">Salate</string>
    <string name="title_brot">Brot</string>
    <string name="title_zusaetze">Zusätze</string>
    <string name="title_kuchen">Kuchen</string>
    <string name="rezeptInitial">Rezept</string>
    <string name="zutatenInitial">Zutat1\nZutat2\nZutat3</string>
    <string name="beschreibungInitial">blablabla</string>
    <string name="topbarBrote">Brot und Co.</string>
    <string name="topbarHauptgerichte">Hauptgerichte</string>
    <string name="topbarKuchen">Kuchen und Kekse</string>
    <string name="topbarZusaetze">Zusätze</string>
    <string name="topbarSalate">Salate</string>
    <string name="deletebutton">Löschen</string>
    <string name="editbutton">Bearbeiten</string>
    <string name="addbutton">+</string>
    <string name="addRecipe">Rezept hinzufügen</string>
    <string name="recipeTitleEdit">Titel</string>
    <string name="recipeIngredientsEdit">Zutaten (bitte mit "\\n" getrennt eingeben!)</string>
    <string name="recipeDescriptionEdit">Beschreibung</string>
    <string name="doneButtonText">Fertig</string>
    <string name="editRecipe">Rezept bearbeiten</string>
</resources>