<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rezept_detail_titel"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="#FFD54F"
        android:padding="24dp"
        android:text="@string/rezeptInitial"
        android:textAlignment="center"
        android:textSize="25sp" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="570dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".rezeptDetail.RezeptDetailActivity">

            <TextView
                android:id="@+id/rezept_detail_zutaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:padding="16dp"
                android:text="@string/zutatenInitial"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/rezept_detail_beschreibung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10sp"
                android:padding="16dp"
                android:text="@string/beschreibungInitial"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <View style="@style/Divider" />
    <View style="@style/Space"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:text="@string/editbutton"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>