<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/addRecipe"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="570dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="570dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipeTitleEdit"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100"
                    android:inputType="textMultiLine|textFilter" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipeIngredientsEdit"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="1000"
                    android:inputType="textMultiLine|textFilter"  />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/recipeDescriptionEdit"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="1000"
                    android:inputType="textMultiLine|textFilter"  />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <View style="@style/Divider" />
    <View style="@style/Space"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/done_button"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:text="@string/doneButtonText"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>