<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/editRecipe"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp">>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textSize="20sp"
                android:text="@string/recipeTitleEdit" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100"
                    android:inputType="textFilter" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ingredients_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textSize="20sp"
                android:text="@string/recipeIngredientsEdit" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="1000"
                    android:inputType="textMultiLine|textFilter" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:textSize="20sp"
                android:text="@string/recipeDescriptionEdit" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="1000"
                    android:inputType="textMultiLine|textFilter" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <View style="@style/Divider" />
    <View style="@style/Space"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/doneButtonText" />
</LinearLayout>